--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -187,7 +187,7 @@
    "outputs": [],
    "source": [
     "#creating a warehouse schema from json file\n",
-    "def create_warehouse_schema_from_json(project_id, json_path):\n",
+    "def create_warehouse_schema(project_id, json_path):\n",
     "    # Initialize BigQuery client\n",
     "    client = bigquery.Client(project=project_id)\n",
     "\n",
@@ -232,45 +232,6 @@
     "            mapping_table = client.create_table(mapping_table)  # API request\n",
     "\n",
     "    print(\"Warehouse schema created successfully.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 182,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#creating a staging schema from json file\n",
-    "def load_data_from_staging_to_warehouse(project_id, dataset_warehouse, dataset_staging, staging_table_id, warehouse_table_names):\n",
-    "    # Initialize BigQuery client\n",
-    "    client = bigquery.Client(project=project_id)\n",
-    "\n",
-    "    # Iterate through the warehouse table names\n",
-    "    for warehouse_table_name in warehouse_table_names:\n",
-    "        # Get the schema of the warehouse table\n",
-    "        warehouse_table = client.get_table(f\"{project_id}.{dataset_warehouse}.{warehouse_table_name}\")\n",
-    "        warehouse_columns = [field.name for field in warehouse_table.schema]\n",
-    "\n",
-    "        # Create a query to select specific columns from the staging table\n",
-    "        source_columns = ', '.join(warehouse_columns)\n",
-    "        sql = f\"\"\"\n",
-    "            SELECT {source_columns}\n",
-    "            FROM `{staging_table_id}`\n",
-    "        \"\"\"\n",
-    "\n",
-    "        # Create table references\n",
-    "        destination_table_ref = f\"{project_id}.{dataset_warehouse}.{warehouse_table_name}\"\n",
-    "\n",
-    "        # Create a load job configuration\n",
-    "        job_config = bigquery.QueryJobConfig()\n",
-    "        job_config.destination = destination_table_ref\n",
-    "        job_config.write_disposition = bigquery.WriteDisposition.WRITE_TRUNCATE\n",
-    "\n",
-    "        # Run the query job\n",
-    "        query_job = client.query(sql, job_config=job_config)\n",
-    "        query_job.result()\n",
-    "\n",
-    "        print(f\"Data copied from {dataset_staging}.{staging_table_id} to {dataset_warehouse}.{warehouse_table_name}\")\n"
    ]
   },
   {
@@ -349,7 +310,7 @@
     "\n",
     "#creating warehouse schema from json file\n",
     "json_path = \"C:\\\\Users\\\\UX501VW\\\\Desktop\\\\BigQuery-Data-Modeling\\\\schema.json\"\n",
-    "create_warehouse_schema_from_json(project_id = project_id, json_path = json_path)\n",
+    "create_warehouse_schema(project_id = project_id, json_path = json_path)\n",
     "\n",
     "#loading data from staging to warehouse\n",
     "dataset_warehouse = \"warehouse\"\n",
