--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -321,6 +321,37 @@
     "load_data_from_staging_to_warehouse(project_id, dataset_warehouse, dataset_staging, staging_table_id, warehouse_table_names)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#loading data\n",
+    "csv_path = \"path to csv file\"\n",
+    "project_id = \"your project id\"\n",
+    "table_name = \"superstore\"\n",
+    "load_csv_to_bigquery(csv_path = csv_path, project_id = project_id, table_name = table_name)\n",
+    "#clean the table\n",
+    "table_id = \"your_project_id.staging.superstore\"\n",
+    "date_columns=[\"Order_Date\", \"Ship_Date\"]\n",
+    "columns_to_check=[\"Customer_ID\", \"Order_Date\", \"Order_ID\", \"Product_ID\"]\n",
+    "clean_bigquery_table(project_id = project_id, table_id = table_id, remove_nulls=True, remove_duplicates=True, date_columns=date_columns, columns_to_check=columns_to_check)\n",
+    "\n",
+    "#creating warehouse schema from json file\n",
+    "json_path = \"path to json file\"\n",
+    "create_warehouse_schema(project_id = project_id, json_path = json_path)\n",
+    "\n",
+    "#loading data from staging to warehouse\n",
+    "dataset_warehouse = \"warehouse\"\n",
+    "dataset_staging = \"staging\"\n",
+    "staging_table_id = \"superstore_cleaned\"\n",
+    "warehouse_table_names = [\"date_dim\", \"customer_dim\", \"product_dim\", \"sales_fact\",\"sales_fact_customer_dim_customer_id\", \n",
+    "                         \"sales_fact_date_dim_order_date\", \"sales_fact_product_dim_product_id\"]\n",
+    "load_data_from_staging_to_warehouse(project_id, dataset_warehouse, dataset_staging, staging_table_id, warehouse_table_names)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
