--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "credentials = os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] =\"ETL-setup.json\""
+    "credentials = os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] =\"path to key\""
    ]
   },
   {
@@ -275,59 +275,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating dataset staging\n",
-      "Data uploaded to BigQuery successfully.\n",
-      "Cleaned table saved as snappy-nomad-382716.staging.superstore_cleaned.\n",
-      "Warehouse schema created successfully.\n",
-      "Data copied from staging.superstore_cleaned to warehouse.date_dim\n",
-      "Data copied from staging.superstore_cleaned to warehouse.customer_dim\n",
-      "Data copied from staging.superstore_cleaned to warehouse.product_dim\n",
-      "Data copied from staging.superstore_cleaned to warehouse.sales_fact\n",
-      "Data copied from staging.superstore_cleaned to warehouse.sales_fact_customer_dim_customer_id\n",
-      "Data copied from staging.superstore_cleaned to warehouse.sales_fact_date_dim_order_date\n",
-      "Data copied from staging.superstore_cleaned to warehouse.sales_fact_product_dim_product_id\n"
-     ]
-    }
-   ],
-   "source": [
-    "#loading data\n",
-    "csv_path = \"C:\\\\Users\\\\UX501VW\\\\Desktop\\\\BigQuery-Data-Modeling\\\\Dastaset\\\\superstore_dataset2011-2015.csv\"\n",
-    "project_id = \"snappy-nomad-382716\"\n",
-    "table_name = \"superstore\"\n",
-    "load_csv_to_bigquery(csv_path = csv_path, project_id = project_id, table_name = table_name)\n",
-    "#clean the table\n",
-    "table_id = \"snappy-nomad-382716.staging.superstore\"\n",
-    "date_columns=[\"Order_Date\", \"Ship_Date\"]\n",
-    "columns_to_check=[\"Customer_ID\", \"Order_Date\", \"Order_ID\", \"Product_ID\"]\n",
-    "clean_bigquery_table(project_id = project_id, table_id = table_id, remove_nulls=True, remove_duplicates=True, date_columns=date_columns, columns_to_check=columns_to_check)\n",
-    "\n",
-    "#creating warehouse schema from json file\n",
-    "json_path = \"C:\\\\Users\\\\UX501VW\\\\Desktop\\\\BigQuery-Data-Modeling\\\\schema.json\"\n",
-    "create_warehouse_schema(project_id = project_id, json_path = json_path)\n",
-    "\n",
-    "#loading data from staging to warehouse\n",
-    "dataset_warehouse = \"warehouse\"\n",
-    "dataset_staging = \"staging\"\n",
-    "staging_table_id = \"superstore_cleaned\"\n",
-    "warehouse_table_names = [\"date_dim\", \"customer_dim\", \"product_dim\", \"sales_fact\",\"sales_fact_customer_dim_customer_id\", \n",
-    "                         \"sales_fact_date_dim_order_date\", \"sales_fact_product_dim_product_id\"]\n",
-    "load_data_from_staging_to_warehouse(project_id, dataset_warehouse, dataset_staging, staging_table_id, warehouse_table_names)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "credentials = os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] =\"path to key\"\n",
     "#loading data\n",
     "csv_path = \"path to csv file\"\n",
     "project_id = \"your project id\"\n",
