load csv updated

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -27,8 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#load data from local machine to bigquery - staging area\n",
-    "def load_csv_to_bigquery(csv_path, project_id, table_name):\n",
+    "\n",
+    "def load_csv_to_bigquery(csv_path, project_id, table_name, schema_file_path):\n",
     "    dataset_name = 'staging'\n",
     "    # Create a BigQuery client using your service account key file\n",
     "    #credentials = service_account.Credentials.from_service_account_file(key_path)\n",
@@ -36,6 +36,9 @@
     "\n",
     "    # Read the CSV file into a Pandas dataframe\n",
     "    df = pd.read_csv(csv_path, encoding='ISO-8859-1')\n",
+    "\n",
+    "    # Replace spaces and dashes with underscores in column names\n",
+    "    df.columns = df.columns.str.lower().str.replace(' ', '_').str.replace('-', '_')\n",
     "\n",
     "    # Create the BigQuery dataset if it doesn't exist\n",
     "    dataset_ref = client.dataset(dataset_name)\n",
@@ -51,9 +54,15 @@
     "    table_ref = dataset_ref.table(table_name)\n",
     "\n",
     "    # Define the schema of the table\n",
-    "    schema = []\n",
-    "    for column in df.columns:\n",
-    "        schema.append(bigquery.SchemaField(column, 'STRING'))\n",
+    "    with open(schema_file_path) as schema_file:\n",
+    "        schema_json = json.load(schema_file)\n",
+    "\n",
+    "    # Replace spaces and hyphens with underscores in field names\n",
+    "    for field in schema_json:\n",
+    "        field['name'] = field['name'].replace(' ', '_').replace('-', '_')\n",
+    "\n",
+    "    # Create the schema field objects\n",
+    "    schema = [bigquery.SchemaField.from_api_repr(field) for field in schema_json]\n",
     "\n",
     "    # Create the table in BigQuery\n",
     "    table = bigquery.Table(table_ref, schema=schema)\n",
@@ -67,7 +76,7 @@
     "    job = client.load_table_from_dataframe(df, table_ref, job_config=job_config)\n",
     "    job.result()\n",
     "\n",
-    "    print(\"Data uploaded to BigQuery successfully.\")"
+    "    print(\"Data uploaded to BigQuery successfully.\")\n"
    ]
   },
   {
