--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -123,6 +123,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def load_xlsx_to_bigquery(xlsx_path, project_id, table_name, schema_file_path):\n",
+    "    dataset_name = 'staging'\n",
+    "    # Create a BigQuery client using your service account key file\n",
+    "    #credentials = service_account.Credentials.from_service_account_file(key_path)\n",
+    "    client = bigquery.Client(project=project_id)\n",
+    "\n",
+    "    # Read the xlsx file into a Pandas dataframe\n",
+    "    df = pd.read_excel(xlsx_path, engine='openpyxl')\n",
+    "\n",
+    "    # Remove time part from datetime columns\n",
+    "    for column in df.columns:\n",
+    "        if df[column].dtype == 'datetime64[ns]':\n",
+    "            df[column] = df[column].dt.date\n",
+    "\n",
+    "    # Replace spaces with underscores in column names\n",
+    "    df.columns = df.columns.str.lower().str.replace(' ', '_').str.replace('-', '_')\n",
+    "\n",
+    "    # Create the BigQuery dataset if it doesn't exist\n",
+    "    dataset_ref = client.dataset(dataset_name)\n",
+    "    try:\n",
+    "        client.get_dataset(dataset_ref)\n",
+    "        print(\"Dataset {} already exists\".format(dataset_name))\n",
+    "    except:\n",
+    "        print(\"Creating dataset {}\".format(dataset_name))\n",
+    "        dataset = bigquery.Dataset(dataset_ref)\n",
+    "        client.create_dataset(dataset)\n",
+    "\n",
+    "    # Set the destination table for the data\n",
+    "    table_ref = dataset_ref.table(table_name)\n",
+    "\n",
+    "    # Define the schema of the table\n",
+    "    with open(schema_file_path) as schema_file:\n",
+    "        schema_json = json.load(schema_file)\n",
+    "\n",
+    "    # Replace spaces with underscores in schema field names\n",
+    "    for field in schema_json:\n",
+    "        field['name'] = field['name'].replace(' ', '_')\n",
+    "\n",
+    "    # Create the schema field objects\n",
+    "    schema = [bigquery.SchemaField.from_api_repr(field) for field in schema_json]\n",
+    "\n",
+    "    # Create the table in BigQuery\n",
+    "    table = bigquery.Table(table_ref, schema=schema)\n",
+    "    table = client.create_table(table)\n",
+    "\n",
+    "    # Load the data into the table\n",
+    "    job_config = bigquery.LoadJobConfig()\n",
+    "    job_config.source_format = bigquery.SourceFormat.CSV\n",
+    "    job_config.skip_leading_rows = 1\n",
+    "    job_config.autodetect = False # Set to True to automatically detect schema, False to use schema defined above\n",
+    "    job = client.load_table_from_dataframe(df, table_ref, job_config=job_config)\n",
+    "    job.result()\n",
+    "\n",
+    "    print(\"Data uploaded to BigQuery successfully.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
