Transformation Function Updated

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -193,7 +193,7 @@
     "#cleaning the table - removing nulls for primary keys, removing duplicates, converting date columns to date format\n",
     "def clean_bigquery_table(project_id, table_id, remove_nulls=False, remove_duplicates=False, date_columns=None, columns_to_check=None):\n",
     "    \"\"\"\n",
-    "    Clean a BigQuery table by removing null values and/or duplicates.\n",
+    "    Clean a BigQuery table by removing null values and/or duplicates, and rounding float columns.\n",
     "\n",
     "    Args:\n",
     "        project_id (str): The Google Cloud Project ID.\n",
@@ -202,6 +202,7 @@
     "        columns_to_check (list, optional): List of columns to check for null values or duplicates. Defaults to None (all columns).\n",
     "        remove_duplicates (bool, optional): Whether to remove duplicate rows. Defaults to False.\n",
     "        date_columns (list, optional): List of columns to convert to date format. Defaults to None.\n",
+    "        float_rounding_decimal (int, optional): Number of decimal places to round float columns. Defaults to 2.\n",
     "\n",
     "    Returns:\n",
     "        None\n",
@@ -230,16 +231,26 @@
     "    else:\n",
     "        sql_condition = \"\"\n",
     "\n",
-    "    # Handle date column transformation, and make all columns lower case\n",
+    "    \n",
+    "    float_rounding_decimal=2\n",
+    "    # Handle date column transformation, float column rounding, and make all columns lower case\n",
     "    select_columns = []\n",
+    "    if date_columns is None:\n",
+    "        date_columns = []\n",
+    "\n",
     "    for column in table.schema:\n",
-    "        if column.name in date_columns:\n",
-    "            select_columns.append(f\"PARSE_DATE('%d-%m-%Y', REGEXP_REPLACE({column.name}, r'/', '-')) AS {column.name.lower()}\")\n",
+    "        if column.field_type == \"FLOAT\":\n",
+    "            select_columns.append(f\"ROUND({column.name}, {float_rounding_decimal}) AS {column.name.lower()}\")\n",
+    "        elif column.name in date_columns:\n",
+    "            parsed_date = f\"PARSE_DATE('%Y-%m-%d', REGEXP_REPLACE({column.name}, r'/', '-'))\"\n",
+    "            select_columns.append(f\"{parsed_date} AS {column.name.lower()}\")\n",
+    "            select_columns.append(f\"EXTRACT(YEAR FROM {parsed_date}) AS {column.name.lower()}_year\")\n",
+    "            select_columns.append(f\"EXTRACT(MONTH FROM {parsed_date}) AS {column.name.lower()}_month\")\n",
+    "            select_columns.append(f\"EXTRACT(DAY FROM {parsed_date}) AS {column.name.lower()}_day\")\n",
     "        else:\n",
     "            select_columns.append(column.name.lower())\n",
     "\n",
-    "\n",
-    "        sql = f\"{deduplicate_clause} {', '.join(select_columns)} FROM ({sql_base}) AS subquery {sql_condition}\"\n",
+    "    sql = f\"{deduplicate_clause} {', '.join(select_columns)} FROM ({sql_base}) AS subquery {sql_condition}\"\n",
     "\n",
     "    # Execute the query and save the results to a new table\n",
     "    new_table_id = f\"{project_id}.{table_ref.dataset_id}.{table_ref.table_id}_cleaned\"\n",
@@ -247,9 +258,12 @@
     "\n",
     "    job_config = bigquery.QueryJobConfig(destination=new_table_ref)\n",
     "    query_job = client.query(sql, job_config=job_config)\n",
+    "   \n",
+    "\n",
     "    query_job.result()\n",
     "\n",
-    "    print(f\"Cleaned table saved as {new_table_id}.\")\n"
+    "    print(f\"Cleaned table saved as {new_table_id}.\")\n",
+    "\n"
    ]
   },
   {
