Load function Updated

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -340,7 +340,7 @@
     "        # Create a query to select and cast specific columns from the staging table\n",
     "        source_columns = ', '.join([f\"CAST({field.name} AS {field.field_type.replace('FLOAT', 'FLOAT64')}) AS {field.name}\" for field in warehouse_table.schema])\n",
     "        sql = f\"\"\"\n",
-    "            SELECT {source_columns}\n",
+    "            SELECT DISTINCT {source_columns}\n",
     "            FROM `{project_id}.{dataset_staging}.{staging_table_id}`\n",
     "        \"\"\"\n",
     "\n",
@@ -356,7 +356,7 @@
     "        query_job = client.query(sql, job_config=job_config)\n",
     "        query_job.result()\n",
     "\n",
-    "        print(f\"Data copied from {dataset_staging}.{staging_table_id} to {dataset_warehouse}.{warehouse_table_name}\")\n"
+    "        print(f\"Data transfered from {dataset_staging}.{staging_table_id} to {dataset_warehouse}.{warehouse_table_name}\")\n"
    ]
   },
   {
