Join function for load added

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -365,6 +365,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def join_staging_with_warehouse_tables(project_id, dataset_staging, staging_table_name, warehouse_dataset, warehouse_table_names):\n",
+    "    # Initialize BigQuery client\n",
+    "    client = bigquery.Client(project=project_id)\n",
+    "\n",
+    "    # Iterate through the warehouse table names\n",
+    "    for warehouse_table_name in warehouse_table_names:\n",
+    "        # Create a query to update the warehouse table with the returned column from the staging table\n",
+    "        sql = f\"\"\"\n",
+    "            UPDATE `{project_id}.{warehouse_dataset}.{warehouse_table_name}` AS T\n",
+    "            SET T.returned = S.returned\n",
+    "            FROM `{project_id}.{dataset_staging}.{staging_table_name}` AS S\n",
+    "            WHERE T.order_id = S.order_id\n",
+    "        \"\"\"\n",
+    "\n",
+    "        # Run the query\n",
+    "        query_job = client.query(sql)\n",
+    "        query_job.result()\n",
+    "\n",
+    "        print(f\"Updated returned column in {warehouse_dataset}.{warehouse_table_name} using staging data.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "credentials = os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] =\"path to key\"\n",
     "#loading data\n",
     "csv_path = \"path to csv file\"\n",
