Clean Function Updated

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -190,7 +190,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cleaning the table - removing nulls for primary keys, removing duplicates, converting date columns to date format\n",
     "def clean_bigquery_table(project_id, table_id, remove_nulls=False, remove_duplicates=False, date_columns=None, columns_to_check=None):\n",
     "    \"\"\"\n",
     "    Clean a BigQuery table by removing null values and/or duplicates, and rounding float columns.\n",
@@ -222,17 +221,17 @@
     "        sql_conditions.append(\" AND \".join(not_null_conditions))\n",
     "\n",
     "    if remove_duplicates:\n",
-    "        deduplicate_clause = \"SELECT DISTINCT\"\n",
+    "        row_number_clause = f\", ROW_NUMBER() OVER (PARTITION BY {', '.join(columns_to_check)} ORDER BY {', '.join([field.name for field in table.schema])}) AS row_number\"\n",
+    "        deduplicate_condition = \"row_number = 1\"\n",
     "    else:\n",
-    "        deduplicate_clause = \"SELECT\"\n",
+    "        row_number_clause = \"\"\n",
+    "        deduplicate_condition = \"TRUE\"\n",
     "\n",
     "    if sql_conditions:\n",
     "        sql_condition = \"WHERE \" + \" AND \".join(sql_conditions)\n",
     "    else:\n",
     "        sql_condition = \"\"\n",
     "\n",
-    "    \n",
-    "    float_rounding_decimal=2\n",
     "    # Handle date column transformation, float column rounding, and make all columns lower case\n",
     "    select_columns = []\n",
     "    if date_columns is None:\n",
@@ -240,17 +239,17 @@
     "\n",
     "    for column in table.schema:\n",
     "        if column.field_type == \"FLOAT\":\n",
-    "            select_columns.append(f\"ROUND({column.name}, {float_rounding_decimal}) AS {column.name.lower()}\")\n",
+    "            select_columns.append(f\"ROUND({column.name}, {2}) AS {column.name.lower()}\")\n",
     "        elif column.name in date_columns:\n",
-    "            parsed_date = f\"PARSE_DATE('%Y-%m-%d', REGEXP_REPLACE({column.name}, r'/', '-'))\"\n",
-    "            select_columns.append(f\"{parsed_date} AS {column.name.lower()}\")\n",
-    "            select_columns.append(f\"EXTRACT(YEAR FROM {parsed_date}) AS {column.name.lower()}_year\")\n",
-    "            select_columns.append(f\"EXTRACT(MONTH FROM {parsed_date}) AS {column.name.lower()}_month\")\n",
-    "            select_columns.append(f\"EXTRACT(DAY FROM {parsed_date}) AS {column.name.lower()}_day\")\n",
+    "            select_columns.append(f\"CAST({column.name} AS DATE) AS {column.name.lower()}\")\n",
+    "            select_columns.append(f\"EXTRACT(YEAR FROM CAST({column.name} AS DATE)) AS {column.name.lower()}_year\")\n",
+    "            select_columns.append(f\"EXTRACT(MONTH FROM CAST({column.name} AS DATE)) AS {column.name.lower()}_month\")\n",
+    "            select_columns.append(f\"EXTRACT(DAY FROM CAST({column.name} AS DATE)) AS {column.name.lower()}_day\")\n",
     "        else:\n",
     "            select_columns.append(column.name.lower())\n",
     "\n",
-    "    sql = f\"{deduplicate_clause} {', '.join(select_columns)} FROM ({sql_base}) AS subquery {sql_condition}\"\n",
+    "    sql = f\"SELECT {', '.join(select_columns)} FROM (SELECT {', '.join(select_columns)}{row_number_clause} FROM ({sql_base}) AS subquery {sql_condition}) AS subquery_with_row_number WHERE {deduplicate_condition}\"\n",
+    "\n",
     "\n",
     "    # Execute the query and save the results to a new table\n",
     "    new_table_id = f\"{project_id}.{table_ref.dataset_id}.{table_ref.table_id}_cleaned\"\n",
@@ -262,8 +261,7 @@
     "\n",
     "    query_job.result()\n",
     "\n",
-    "    print(f\"Cleaned table saved as {new_table_id}.\")\n",
-    "\n"
+    "    print(f\"Cleaned table saved as {new_table_id}.\")\n"
    ]
   },
   {
