--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -291,14 +291,16 @@
     "\n",
     "    # Define fact table schema\n",
     "    fact_table_name = schema_info['fact_table_name']\n",
-    "    fact_table_columns = [bigquery.SchemaField(field['name'], field['type'], mode=field.get('mode', 'NULLABLE')) for field in schema_info['fact_table_columns']]\n",
+    "    fact_table_columns = [bigquery.SchemaField(field['name'], field['type'], mode=field.get('mode', 'NULLABLE')) \n",
+    "                          for field in schema_info['fact_table_columns']]\n",
     "    fact_table_ref = client.dataset(dataset_id).table(fact_table_name)\n",
     "    fact_table = bigquery.Table(fact_table_ref, schema=fact_table_columns)\n",
     "    fact_table = client.create_table(fact_table)  # API request\n",
     "\n",
     "    # Create dimension tables\n",
     "    for dimension_table_name, dimension_table_info in schema_info['dimension_tables'].items():\n",
-    "        dimension_table_columns = [bigquery.SchemaField(field['name'], field['type'], mode=field.get('mode', 'NULLABLE')) for field in dimension_table_info]\n",
+    "        dimension_table_columns = [bigquery.SchemaField(field['name'], field['type'], mode=field.get('mode', 'NULLABLE'))\n",
+    "                                   for field in dimension_table_info]\n",
     "        dimension_table_ref = client.dataset(dataset_id).table(dimension_table_name)\n",
     "        dimension_table = bigquery.Table(dimension_table_ref, schema=dimension_table_columns)\n",
     "        dimension_table = client.create_table(dimension_table)  # API request\n",
@@ -306,10 +308,10 @@
     "    # Create fact-dimension mapping tables\n",
     "    for fact_column, dimension_map in schema_info['fact_dimension_key_map'].items():\n",
     "        for dimension_column, dimension_table_name in dimension_map.items():\n",
-    "            mapping_table_name = f\"{fact_table_name}_{dimension_table_name}_{dimension_column}\"\n",
+    "            mapping_table_name = f\"{fact_table_name}_{dimension_table_name}\"\n",
     "            mapping_table_columns = [\n",
-    "                bigquery.SchemaField(fact_column, 'STRING', mode='REQUIRED'),\n",
-    "                bigquery.SchemaField(dimension_column, 'STRING', mode='REQUIRED'),\n",
+    "                bigquery.SchemaField(fact_column, 'INTEGER', mode='REQUIRED'),\n",
+    "                bigquery.SchemaField(dimension_column, 'INTEGER', mode='REQUIRED'),\n",
     "            ]\n",
     "            mapping_table_ref = client.dataset(dataset_id).table(mapping_table_name)\n",
     "            mapping_table = bigquery.Table(mapping_table_ref, schema=mapping_table_columns)\n",
