Load function updated

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -356,7 +356,7 @@
     "        query_job = client.query(sql, job_config=job_config)\n",
     "        query_job.result()\n",
     "\n",
-    "        print(f\"Data transfered from {dataset_staging}.{staging_table_id} to {dataset_warehouse}.{warehouse_table_name}\")\n"
+    "        print(f\"Data copied from {dataset_staging}.{staging_table_id} to {dataset_warehouse}.{warehouse_table_name}\")\n"
    ]
   },
   {
