Surrogate key generator function added

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -266,6 +266,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_surrogate_keys(table_id, json_file):\n",
+    "    with open(json_file, 'r') as f:\n",
+    "        surrogate_keys_data = json.load(f)\n",
+    "\n",
+    "    for data in surrogate_keys_data:\n",
+    "        surrogate_key_column = data[\"surrogate_key_column\"]\n",
+    "        base_columns = data[\"base_columns\"]\n",
+    "        starting_point = data[\"starting_point\"]\n",
+    "\n",
+    "        generate_single_surrogate_key(table_id, surrogate_key_column, base_columns, starting_point)\n",
+    "\n",
+    "def generate_single_surrogate_key(table_id, surrogate_key_column, base_columns, starting_point):\n",
+    "    client = bigquery.Client()\n",
+    "\n",
+    "    # Prepare the base columns for use in the query\n",
+    "    base_columns_str = \", \".join(base_columns)\n",
+    "\n",
+    "    temp_table_id = f\"{table_id}_temp\"\n",
+    "\n",
+    "    # Create a temporary table with unique combinations of base columns and surrogate keys\n",
+    "    create_temp_table_query = f\"\"\"\n",
+    "        CREATE OR REPLACE TABLE `{temp_table_id}` AS\n",
+    "        SELECT\n",
+    "            {base_columns_str},\n",
+    "            ROW_NUMBER() OVER () + {starting_point} - 1 AS {surrogate_key_column}\n",
+    "        FROM\n",
+    "            (SELECT DISTINCT {base_columns_str} FROM `{table_id}`)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Update the original table with the surrogate keys from the temporary table\n",
+    "    update_original_table_query = f\"\"\"\n",
+    "        CREATE OR REPLACE TABLE `{table_id}` AS\n",
+    "        SELECT\n",
+    "            A.*,\n",
+    "            B.{surrogate_key_column}\n",
+    "        FROM\n",
+    "            `{table_id}` A\n",
+    "        JOIN\n",
+    "            `{temp_table_id}` B\n",
+    "        ON\n",
+    "            { \" AND \".join([f\"A.{col} = B.{col}\" for col in base_columns]) }\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Drop the temporary table\n",
+    "    drop_temp_table_query = f\"\"\"\n",
+    "        DROP TABLE `{temp_table_id}`\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Execute the queries\n",
+    "    client.query(create_temp_table_query).result()\n",
+    "    client.query(update_original_table_query).result()\n",
+    "    client.query(drop_temp_table_query).result()\n",
+    "\n",
+    "    print(f\"Surrogate key '{surrogate_key_column}' generated for table '{table_id}' using columns '{base_columns_str}'.\")\n",
+    "\n",
+    "# Usage example:\n",
+    "# generate_surrogate_keys(\"your_project_id.your_dataset_id.your_table_id\", \"input.json\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
