--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "#wxtracting data from csv file and loading it into staging area with the desired schema\n",
     "def load_csv_to_bigquery(csv_path, project_id, table_name, schema_file_path):\n",
     "    dataset_name = 'staging'\n",
     "    # Create a BigQuery client using your service account key file\n",
@@ -76,7 +76,8 @@
     "    job = client.load_table_from_dataframe(df, table_ref, job_config=job_config)\n",
     "    job.result()\n",
     "\n",
-    "    print(\"Data uploaded to BigQuery successfully.\")\n"
+    "    print(\"Data loaded to Staging Area successfully.\")\n",
+    "\n"
    ]
   },
   {
