transformation functions and readme about it done

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -191,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clean_bigquery_table(project_id, table_id, remove_nulls=False, remove_duplicates=False, date_columns=None, columns_to_check=None):\n",
+    "def data_transform(project_id, table_id, remove_nulls=False, remove_duplicates=False, date_columns=None, columns_to_check=None):\n",
     "    \"\"\"\n",
     "    Clean a BigQuery table by removing null values and/or duplicates, and rounding float columns.\n",
     "\n",
@@ -217,10 +217,12 @@
     "    sql_base = f\"SELECT * FROM `{table_id}`\"\n",
     "    sql_conditions = []\n",
     "\n",
+    "    #remove nulls for selected columns in columns to check\n",
     "    if remove_nulls:\n",
     "        not_null_conditions = [f\"{column} IS NOT NULL\" for column in columns_to_check]\n",
     "        sql_conditions.append(\" AND \".join(not_null_conditions))\n",
     "\n",
+    "    #removes duplicates based on columns to check which are the primary keys of dimensions\n",
     "    if remove_duplicates:\n",
     "        row_number_clause = f\", ROW_NUMBER() OVER (PARTITION BY {', '.join(columns_to_check)} ORDER BY {', '.join([field.name for field in table.schema])}) AS row_number\"\n",
     "        deduplicate_condition = \"row_number = 1\"\n",
@@ -237,7 +239,7 @@
     "    select_columns = []\n",
     "    if date_columns is None:\n",
     "        date_columns = []\n",
-    "\n",
+    "    #round the float values to 2 decimal places, extract year, mont, and day for dates columns\n",
     "    for column in table.schema:\n",
     "        if column.field_type == \"FLOAT\":\n",
     "            select_columns.append(f\"ROUND({column.name}, {2}) AS {column.name.lower()}\")\n",
