--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -460,30 +460,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "credentials = os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] =\"path to key\"\n",
+    "#order dataset\n",
     "#loading data\n",
-    "csv_path = \"path to csv file\"\n",
+    "xlsx_path = \"path to Global_Superstore_Orders.xlsx\"\n",
     "project_id = \"your project id\"\n",
     "table_name = \"superstore\"\n",
-    "load_csv_to_bigquery(csv_path = csv_path, project_id = project_id, table_name = table_name)\n",
+    "schema_file_path = \"path to staging_schema.json\"\n",
+    "load_xlsx_to_bigquery(xlsx_path, project_id, table_name , schema_file_path)\n",
+    "\n",
     "#clean the table\n",
-    "table_id = \"your_project_id.staging.superstore\"\n",
-    "date_columns=[\"Order_Date\", \"Ship_Date\"]\n",
-    "columns_to_check=[\"Customer_ID\", \"Order_Date\", \"Order_ID\", \"Product_ID\"]\n",
-    "clean_bigquery_table(project_id = project_id, table_id = table_id, remove_nulls=True, remove_duplicates=True, date_columns=date_columns, columns_to_check=columns_to_check)\n",
+    "table_id = \"your project id.staging.superstore\"\n",
+    "date_columns=[\"order_date\", \"ship_date\"]\n",
+    "columns_to_check=[\"customer_id\", \"order_date\", \"order_id\", \"product_id\"]\n",
+    "data_transform(project_id, table_id, remove_nulls=True, remove_duplicates=True, date_columns=date_columns, columns_to_check=columns_to_check)\n",
+    "\n",
+    "#generate surrogate keys\n",
+    "table_id = \"your project id.staging.superstore_cleaned\"\n",
+    "json_file = \"path to surrogate_key.json\"\n",
+    "generate_surrogate_keys(table_id, json_file)\n",
     "\n",
     "#creating warehouse schema from json file\n",
-    "json_path = \"path to json file\"\n",
+    "json_path = \"path to warehouse_schema.json\"\n",
     "create_warehouse_schema(project_id = project_id, json_path = json_path)\n",
     "\n",
     "#loading data from staging to warehouse\n",
     "dataset_warehouse = \"warehouse\"\n",
     "dataset_staging = \"staging\"\n",
     "staging_table_id = \"superstore_cleaned\"\n",
-    "warehouse_table_names = [\"date_dim\", \"customer_dim\", \"product_dim\", \"sales_fact\",\"sales_fact_customer_dim_customer_id\", \n",
-    "                         \"sales_fact_date_dim_order_date\", \"sales_fact_product_dim_product_id\"]\n",
-    "load_data_from_staging_to_warehouse(project_id, dataset_warehouse, dataset_staging, staging_table_id, warehouse_table_names)\n",
-    "\n"
+    "warehouse_table_names = [\"date\", \"customer\", \"product\", \"fact_orders\",\"fact_orders_customer\", \n",
+    "                         \"fact_orders_date\", \"fact_orders_product\"]\n",
+    "load_data_from_staging_to_warehouse(project_id, dataset_warehouse, dataset_staging, staging_table_id, warehouse_table_names)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#return dataset\n",
+    "#loading data\n",
+    "csv_path = \"path to Global_Superstore_Returns_.csv\"\n",
+    "project_id = \"your project id\"\n",
+    "table_name = \"returns\"\n",
+    "schema_file_path = \"path to returned_schema.json\"\n",
+    "load_csv_to_bigquery(csv_path = csv_path, project_id = project_id, table_name = table_name, schema_file_path=schema_file_path)\n",
+    "\n",
+    "#clean the table\n",
+    "table_id = \"your project id.staging.returns\"\n",
+    "columns_to_check=[\"order_id\"]\n",
+    "data_transform(project_id , table_id, remove_nulls=True, remove_duplicates=True,date_columns=None, columns_to_check=columns_to_check)\n",
+    "\n",
+    "#joining fact_orders and returns\n",
+    "staging_table_name = \"returns_cleaned\"\n",
+    "warehouse_table_names = [\"fact_orders\"]\n",
+    "join_staging_with_warehouse_tables(project_id, dataset_staging, staging_table_name, dataset_warehouse, warehouse_table_names)"
    ]
   }
  ],
